force-app/main/default/objects/Ticket__c.object
<CustomObject>
    <fields>
        <fullName>Number_of_Tickets__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Number of Tickets</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Participation__c</fullName>
        <label>Participation</label>
        <referenceTo>Participation__c</referenceTo>
        <relationshipLabel>Tickets</relationshipLabel>
        <relationshipName>Tickets</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Ticket_Type__c</fullName>
        <label>Ticket Type</label>
        <referenceTo>Ticket_Type__c</referenceTo>
        <relationshipLabel>Tickets</relationshipLabel>
        <relationshipName>Tickets</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Ticket</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Participation__c</field>
            <operation>equals</operation>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Ticket Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tickets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>